--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+w3m-modal {
+  z-index: 1050 !important; 
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* body, *{
+  padding: 0;
+  margin: 0;
+} */
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
+/* wui-card {
+  z-index: 1050 !important; 
+} */
